--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,8 @@
   journal={ACM Conference on Fairness, Accountability, and Transparency (ACM FAccT ’24)},
   year={2024},
   publisher={ACM},
-  selected={true}
+  selected={true},
+  pdf={rational_agent_explainable_AI.pdf}
 }
 
 @article{wu2023rational,
@@ -17,7 +18,8 @@
   journal={IEEE Transactions on Visualization and Computer Graphics},
   year={2023},
   publisher={IEEE},
-  selected={true}
+  selected={true},
+  pdf={Formalization_Visualization_VIS.pdf}
 }
 
 
@@ -27,11 +29,9 @@
   journal={IEEE Transactions on Visualization and Computer Graphics},
   year={2023},
   publisher={IEEE},
-  selected={true}
+  selected={true},
+  pdf={_VIS_2023__EVM.pdf}
 }
-
-
-
 
 
 @inproceedings{wu2020visual,
@@ -43,7 +43,6 @@
   pages={36--47},
   year={2020},
   organization={IEEE},
-  selected={false},
   pdf={Visual_Analytics_of_Multivariate_Event_Sequence_Data_in_Racquet_Sports.pdf}
 }
 
@@ -58,7 +57,6 @@
   pages={835--845},
   year={2021},
   publisher={IEEE},
-  selected={false},
   pdf={TacticFlow_Visual_Analytics_of_Ever-Changing_Tactics_in_Racket_Sports.pdf}
 }
 
@@ -70,6 +68,5 @@
   journal={IEEE Transactions on Visualization and Computer Graphics},
   year={2022},
   publisher={IEEE},
-  selected={false},
   pdf={RASIPAM_Interactive_Pattern_Mining_of_Multivariate_Event_Sequences_in_Racket_Sports.pdf}
 }
