--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,8 @@
   year={2024},
   publisher={ACM},
   selected={true},
-  pdf={rational_agent_explainable_AI.pdf}
+  pdf={rational_agent_explainable_AI.pdf},
+  video={https://youtu.be/3KX0zq7ewpo}
 }
 
 @article{wu2023rational,
@@ -19,7 +20,8 @@
   year={2023},
   publisher={IEEE},
   selected={true},
-  pdf={Formalization_Visualization_VIS.pdf}
+  pdf={Formalization_Visualization_VIS.pdf},
+  video={https://youtu.be/ZxK1RGM7o7U?si=tIL9A_TGCMAAPP3l}
 }
 
 
