--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -78,3 +78,14 @@
   publisher={IEEE},
   pdf={RASIPAM_Interactive_Pattern_Mining_of_Multivariate_Event_Sequences_in_Racket_Sports.pdf}
 }
+
+@article{guo2024unexploited,
+  abbr={NeurIPS 2024 Workshop},
+  bibtex_show={true},
+  title={Unexploited Information Value in Human-AI Collaboration},
+  author={Guo, Ziyang and Wu, Yifan and Hartline, Jason and Hullman, Jessica},
+  journal={arXiv preprint arXiv:2411.10463},
+  year={2024},
+  selected={true},
+  pdf={informativeness.pdf},
+}
